kustomize/overlays/production/replica-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-tech-test
spec:
  replicas: 5
