kustomize/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.production-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-my-api
                port:
                  number: 80
