kustomize/overlays/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-tech-test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - your-production-domain.com
    secretName: devops-tech-test-tls
  rules:
  - host: your-production-domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-tech-test-service
            port:
              number: 80
