kustomize/overlays/production/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-devops-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-devops-api
                port:
                  number: 80
